--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Origin Dapp Test Builds</title>
   </head>
   <body>
-    <a href="/nick">Nick's Test Build</a>
+    <div class="container text-center">
+      <h3 class="mt-3">Origin Dapp Test Builds</h3>
+      <ul class="nav flex-column">
+        <li class="nav-item">
+          <a class="nav-link" href="/test-builds/nick">Nick's Test Build</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
