--- a/nick/index.html
+++ b/nick/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Origin Admin</title>
+    <title>Origin Protocol DApp</title>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.f5b8ac27.css" />
+    <link rel="stylesheet" href="app.ecd05a00.css" />
   </head>
   <body><div id="app"><div class="p-3">Please wait...</div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -21,5 +21,5 @@
     localStorage.ognNetwork = "mainnet"
     localStorage.metaMaskEnabled = "true"
   </script>
-  <script src="app.f5b8ac27.js"></script>
+  <script src="app.ecd05a00.js"></script>
 </html>
