--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/test-builds/stan">Stan's Test Build</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/test-builds/natasha">Natasha's Test Build</a>
+        </li>
       </ul>
     </div>
   </body>
