--- a/natasha/index.html
+++ b/natasha/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.b7b42e8c.css" />
+    <link rel="stylesheet" href="app.2a8ed9ae.css" />
   </head>
   <body><div id="app"><div class="p-3">Please wait...</div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -18,8 +18,8 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "mainnet"
+    localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
-  <script src="app.b7b42e8c.js"></script>
+  <script src="app.2a8ed9ae.js"></script>
 </html>
