--- a/natasha/template.html
+++ b/natasha/template.html
@@ -18,7 +18,7 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "mainnet"
+    localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %><script src="<%- file %>"></script><% }); %>
