--- a/nick/index.html
+++ b/nick/index.html
@@ -2,11 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Origin Protocol DApp</title>
-    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.ecd05a00.css" />
+    <link rel="stylesheet" href="app.fbfbd7a5.css" />
   </head>
   <body><div id="app"><div class="p-3">Please wait...</div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -21,5 +21,5 @@
     localStorage.ognNetwork = "mainnet"
     localStorage.metaMaskEnabled = "true"
   </script>
-  <script src="app.ecd05a00.js"></script>
+  <script src="app.fbfbd7a5.js"></script>
 </html>
