switch to rinkeby

--- a/cuong/index.html
+++ b/cuong/index.html
@@ -18,7 +18,7 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "mainnet"
+    localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
   <script src="app.fc1cf454.js"></script>
