--- a/nick/index.html
+++ b/nick/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.3bdc52df.css" />
+    <link rel="stylesheet" href="app.4ca875e9.css" />
   </head>
-  <body><div id="app"><div class="p-3">Please wait...</div></div></body>
+  <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
   <script>
     if (typeof window.openpgp !== 'undefined') {
@@ -18,8 +18,8 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "mainnet"
+    localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
-  <script src="app.3bdc52df.js"></script>
+  <script src="app.4ca875e9.js"></script>
 </html>
