--- a/nick/mainnet.html
+++ b/nick/mainnet.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
     <link rel="stylesheet" href="app.b1f49872.css" />
+    <script src="https://browser.sentry-cdn.com/4.5.3/bundle.min.js" crossorigin="anonymous"></script>
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -18,6 +19,7 @@
     }
   </script> -->
   <script>
+    Sentry.init({ dsn: 'https://e27fde25f7b64b5080055ec6e0fd026c@sentry.io/1388577' });
     localStorage.ognNetwork = "mainnet"
     localStorage.metaMaskEnabled = "true"
   </script>
