--- a/nick/kovan.html
+++ b/nick/kovan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.c3cd8928.css" />
+    <link rel="stylesheet" href="app.da0b436c.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -18,6 +18,7 @@
     }
   </script> -->
   <script>
+    localStorage.disableMessaging = true
     localStorage.ognNetwork = "kovanTst"
     localStorage.metaMaskEnabled = "true"
   </script>
@@ -33,5 +34,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.c3cd8928.js"></script>
+  <script src="app.da0b436c.js"></script>
 </html>
