--- a/nick/kovan.html
+++ b/nick/kovan.html
@@ -18,6 +18,7 @@
     }
   </script> -->
   <script>
+    localStorage.disableMessaging = true
     localStorage.ognNetwork = "kovanTst"
     localStorage.metaMaskEnabled = "true"
   </script>
