--- a/natasha/index.html
+++ b/natasha/index.html
@@ -2,13 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Origin Protocol DApp</title>
-    <meta name="viewport" content="initial-scale=1.0, width=device-width" />
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.2d64eec4.css" />
+    <link rel="stylesheet" href="app.7a866857.css" />
   </head>
-  <body><div id="app"><div class="p-3">Please wait...</div></div></body>
+  <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
   <script>
     if (typeof window.openpgp !== 'undefined') {
@@ -21,5 +21,17 @@
     localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
-  <script src="app.2d64eec4.js"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106384880-2"></script>
+  <script>
+    var hostname = window.location.hostname
+    window.dataLayer = window.dataLayer || []
+    if (window.gtag == undefined) {
+      function gtag(){ dataLayer.push(arguments) }
+    }
+    if (hostname !== 'localhost' && hostname !== '0.0.0.0') {
+      gtag('js', new Date());
+      gtag('config', 'UA-106384880-2');
+    }
+  </script>
+  <script src="app.7a866857.js"></script>
 </html>
