--- a/nick/mainnet.html
+++ b/nick/mainnet.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
+    <meta http-equiv="expires" content="0">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.9a7aaccb.css" />
+    <link rel="stylesheet" href="app.25f3a374.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -33,5 +34,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.9a7aaccb.js"></script>
+  <script src="app.25f3a374.js"></script>
 </html>
