--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       <h3 class="mt-3">Origin Dapp Test Builds</h3>
       <ul class="list-unstyled">
         <li class="mb-2">
+          Stablecoin: <a href="/test-builds/dai">Rinkeby</a>
+        </li>
+        <li class="mb-2">
           Nick's Build: <a href="/test-builds/nick">Rinkeby</a> /
           <a href="/test-builds/nick/kovan.html">Kovan</a> /
           <a href="/test-builds/nick/mainnet.html">Mainnet</a>
