--- a/dai/index.html
+++ b/dai/index.html
@@ -19,7 +19,7 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "rinkeby"
+    localStorage.ognNetwork = "dai"
     localStorage.metaMaskEnabled = "true"
   </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106384880-2"></script>
