--- a/dai/index.html
+++ b/dai/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="expires" content="0">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.6fcade3e.css" />
+    <link rel="stylesheet" href="app.d56596e2.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -19,7 +19,7 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "dai"
+    localStorage.ognNetwork = "rinkeby"
     localStorage.metaMaskEnabled = "true"
   </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106384880-2"></script>
@@ -34,5 +34,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.6fcade3e.js"></script>
+  <script src="app.d56596e2.js"></script>
 </html>
