--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a href="/test-builds/dapp1">DApp 1 :(</a>
         </li>
         <li>
-          <a href="/test-builds/cuong">Micah's vConsole Experiment</a>
+          <a href="/test-builds/vconsole">Micah's vConsole Experiment</a>
         </li>
       </ul>
     </div>
