--- a/dai/mainnet.html
+++ b/dai/mainnet.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="expires" content="0">
+    <meta property="og:url" content="https://dapp.originprotocol.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Origin Protocol Dapp">
+    <meta property="og:description" content="Decentralized marketplace on the blockchain">
+    <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.e5a46128.css" />
+    <link rel="stylesheet" href="app.520df979.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -34,5 +39,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.e5a46128.js"></script>
+  <script src="app.520df979.js"></script>
 </html>
