--- a/nick/origin.html
+++ b/nick/origin.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <title>Origin Protocol DApp</title>
+    <meta name="title" content="Origin Protocol">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="Content-Language" content="en">
@@ -12,7 +13,7 @@
     <meta property="og:description" content="Decentralized marketplace on the blockchain">
     <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.bcb5f0d6.css" />
+    <link rel="stylesheet" href="app.8cb42391.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -39,5 +40,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.bcb5f0d6.js"></script>
+  <script src="app.8cb42391.js"></script>
 </html>
