--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
         <li>
           <a href="/test-builds/vconsole">Micah's vConsole Experiment</a>
         </li>
+        <li>
+          <a href="/test-builds/user-activation">User activation test build</a>
+        </li>
       </ul>
     </div>
   </body>
