--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
           <a href="/test-builds/user-activation">User activation test build</a>
         </li>
         <li>
-          <a href="/test-builds/dapp3">DApp3</a>
+          <a href="/test-builds/dapp3">DApp3</a> /
+          <a href="/test-builds/dapp3/mainnet.html">Mainnet</a> /
         </li>
       </ul>
     </div>
