--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
         <li>
           <a href="/test-builds/dapp3">DApp3</a> /
-          <a href="/test-builds/dapp3/mainnet.html">Mainnet</a> /
+          <a href="/test-builds/dapp3/mainnet.html">Mainnet</a>
         </li>
       </ul>
     </div>
