--- a/dapp3/index.html
+++ b/dapp3/index.html
@@ -12,8 +12,9 @@
     <meta property="og:title" content="Origin Protocol Dapp">
     <meta property="og:description" content="Decentralized marketplace on the blockchain">
     <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
+    <meta name="apple-itunes-app" content="app-id=1446091928">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.a9b92d40.css" />
+    <link rel="stylesheet" href="app.3405c7e9.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -40,5 +41,5 @@
       gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.a9b92d40.js"></script>
+  <script src="app.3405c7e9.js"></script>
 </html>
