--- a/shah/dev.html
+++ b/shah/dev.html
@@ -4,10 +4,7 @@
     <title>Origin Protocol DApp - devel</title>
     <meta name="title" content="Origin Protocol">
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta http-equiv="Content-Language" content="en" />
     <link rel="icon" href="favicon.ico" />
     <style>
