--- a/shah/template.html
+++ b/shah/template.html
@@ -4,7 +4,7 @@
     <title>Origin Protocol DApp</title>
     <meta name="title" content="Origin Protocol">
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="expires" content="0">
     <meta property="og:url" content="https://dapp.originprotocol.com">
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Origin Protocol Dapp">
     <meta property="og:description" content="Decentralized marketplace on the blockchain">
     <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
+    <meta name="apple-itunes-app" content="app-id=1446091928">
     <link rel="icon" href="favicon.ico" />
     <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %><link rel="stylesheet" href="<%- file %>" /><% }); %>
   </head>
