--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
           <a href="/test-builds/dapp3">DApp3</a> /
           <a href="/test-builds/dapp3/mainnet.html">Mainnet</a>
         </li>
+        <li>
+          <a href="/test-builds/shah">Shah&apos;s test build</a>
+        </li>
       </ul>
     </div>
   </body>
