--- a/nick/template.html
+++ b/nick/template.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="expires" content="0">
-    <meta property="og:url" content="https://dapp.originprotocol.com">
+    <meta property="og:url" content="https://www.shoporigin.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Origin Protocol Dapp">
     <meta property="og:description" content="Decentralized marketplace on the blockchain">
-    <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
+    <meta property="og:image" content="https://www.shoporigin.com/images/join-origin-earn-tokens.png">
     <meta name="apple-itunes-app" content="app-id=1446091928">
     <link rel="icon" href="favicon.ico" />
     <% _.forEach(htmlWebpackPlugin.files.css, function(file) { %><link rel="stylesheet" href="<%- file %>" /><% }); %>
@@ -38,7 +38,6 @@
     }
     if (hostname !== 'localhost' && hostname !== '0.0.0.0') {
       gtag('js', new Date());
-      gtag('config', 'UA-106384880-2');
     }
   </script>
   <% _.forEach(htmlWebpackPlugin.files.js, function(file) { %><script src="<%- file %>"></script><% }); %>
