--- a/nick/kovan.html
+++ b/nick/kovan.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no, user-scalable=no">
     <meta http-equiv="Content-Language" content="en">
     <meta http-equiv="expires" content="0">
-    <meta property="og:url" content="https://dapp.originprotocol.com">
+    <meta property="og:url" content="https://www.shoporigin.com">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Origin Protocol Dapp">
     <meta property="og:description" content="Decentralized marketplace on the blockchain">
-    <meta property="og:image" content="https://dapp.originprotocol.com/images/join-origin-earn-tokens.png">
+    <meta property="og:image" content="https://www.shoporigin.com/images/join-origin-earn-tokens.png">
     <meta name="apple-itunes-app" content="app-id=1446091928">
     <link rel="icon" href="favicon.ico" />
-    <link rel="stylesheet" href="app.826c8baf.css" />
+    <link rel="stylesheet" href="app.42045e7a.css" />
   </head>
   <body><div id="app"><div class="loading-screen"></div></div></body>
   <!-- <script crossorigin src="vendor/openpgp.min.js"></script>
@@ -38,8 +38,7 @@
     }
     if (hostname !== 'localhost' && hostname !== '0.0.0.0') {
       gtag('js', new Date());
-      gtag('config', 'UA-106384880-2');
     }
   </script>
-  <script src="app.826c8baf.js"></script>
+  <script src="app.42045e7a.js"></script>
 </html>
