Add to index.html

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         Ryan:loading-to-spinner: <a href="/test-builds/loading-to-spinner">Rinkeby</a> /
         <a href="/test-builds/loading-to-spinner/mainnet.html">Mainnet</a>
       </li>
+      <li class="mb-3">
+        Shipping Address: <a href="/test-builds/shipping">Rinkeby</a> /
+        <a href="/test-builds/shipping/mainnet.html">Mainnet</a>
+      </li>
     </ul>
   </div>
 </body>
