Add staging build

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         EthGasStationProvider: <a href="/test-builds/gas-provider">Rinkeby</a> /
         <a href="/test-builds/gas-provider/mainnet.html">Mainnet</a>
       </li>
+      <li class="mb-3">
+        Staging: <a href="/test-builds/staging">Rinkeby</a> /
+        <a href="/test-builds/staging/mainnet.html">Mainnet</a>
+      </li>
     </ul>
   </div>
 </body>
