Default index to mainnet

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <a href="/test-builds/gas-provider/mainnet.html">Mainnet</a>
       </li>
       <li class="mb-3">
-        Staging: <a href="/test-builds/staging">Rinkeby</a> /
-        <a href="/test-builds/staging/mainnet.html">Mainnet</a>
+        Staging: <a href="/test-builds/staging/rinkeby.html">Rinkeby</a> /
+        <a href="/test-builds/staging/index.html">Mainnet</a>
       </li>
     </ul>
   </div>
