--- a/staging/index.html
+++ b/staging/index.html
@@ -26,7 +26,7 @@
     }
   </script> -->
   <script>
-    localStorage.ognNetwork = "rinkeby"
+    localStorage.ognNetwork = "mainnet"
     localStorage.metaMaskEnabled = "true"
   </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-106384880-2"></script>
