--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
         Staging: <a href="/test-builds/staging/rinkeby.html">Rinkeby</a> /
         <a href="/test-builds/staging/index.html">Mainnet</a>
       </li>
+      <li class="mb-3">
+        Telegram: <a href="/test-builds/telegram">Rinkeby</a> /
+        <a href="/test-builds/telegram/mainnet.html">Mainnet</a>
+      </li>
     </ul>
   </div>
 </body>
