--- a/shah/dev.html
+++ b/shah/dev.html
@@ -32,5 +32,6 @@
     localStorage.ognNetwork = '{NET}'
     localStorage.metaMaskEnabled = '{MM_ENABLED}'
   </script>
+  <!--<script crossorigin src="http://192.168.1.6:8083/app.js"></script>-->
   <script crossorigin src="{HOST}app.js"></script>
 </html>
